app/globals.css
@import "tailwindcss";

:root {
  --background: #161316;
  --primary: #FF6D28;
  --secondary: #453027;
  --text-color: #FFFFFF; 
  --placeholder: #BABABA;

  --primaryGreen: #00E5B5;
  --secondaryGreen: #085041;
  --tertiaryGreen: #0F2E1E;

  --primaryYellow: #E5D900;
  --secondaryYellow: #504E08;

  --primaryRed: #FAEEDA;
  --secondaryRed: #BA7517;
  --tertiaryRed: #854F0B;

  --card: #453027;  

  --heading1: 48px;
  --heading2: 40px;
  --heading3: 32px;
  --heading4: 24px;
  --heading5: 20px;
  --paragraph: 12px;
  --caption: 12px;
  --button: 16px;
}

@media (max-width: 1024px) {
  :root {
    --heading1: 40px;
    --heading2: 32px;
    --heading3: 26px;
    --heading4: 20px;
    --heading5: 18px;
    --paragraph: 13px;
    --caption: 11px;
    --button: 15px;
  }
}

/* Phone */
@media (max-width: 768px) {
  :root {
    --heading1: 24px;
    --heading2: 16px;
    --heading3: 12px;
    --heading4: 10px;
    --heading5: 16px;
    --paragraph: 12px;
    --caption: 10px;
    --button: 10px;
  }
}

/* @theme inline {
  --color-background: var(--background);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  
} */

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif; 
}

button{
  padding-inline: 16px;
  padding-block: 12px;
  background: var(--primary);
  font-family: var(--font-fustat);
  font-size: var(--button);
  letter-spacing: -2.5%;
  font-weight: 600;
  line-height: var(--button);
  color: var(--background);
  cursor: pointer;
}

@media (max-width: 768px) {
  button{
    font-weight: 700;
  }
}

